# articubot_one

./: CMakeLists.txt  package.xml
commander/: CMakeLists.txt  package.xml
commander/src/: pub_command.py
config/: config.rviz  mapper_params_online_async.yaml  view_bot.rviz
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
description/mecanum_wheel/: mecanum_wheel.gazebo.xacro  mecanum_wheel.urdf.xacro
description/meshes/: base_link.stl  camera_link.stl  lidar_1.stl
launch/: launch_sim.launch.py  launch_simoutdoor.launch.py  rsp.launch.py
robot_control/config/: controller.yaml
robot_control/launch/: robot_control.launch
worlds/: my_world.world  obstical.world
worlds/my.world/: model.config  model.sdf
worlds/my_warehouse/: model.config  model.sdf
worlds/outdoor_world.world/: model.config  model.world
