<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>articubot_one</name>
  <version>0.0.0</version>
  <description>This package contains the description and meshes for the articubot_one robot.</description>
  <maintainer email="marmaalii@gmail.com">maaligr</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  
  <!-- Runtime dependencies -->
  <!-- Add any runtime dependencies here -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
